# GolemFactory

./: .gitignore  CMakeLists.txt  README.md  Shader.cpp  Shader.h  SimpleTransform.vertexshader  TODO.md  TODO.txt  Tuto1.cpp  Utile.h  imgui.ini  physicsWorkFlow.drawio  vs-chromium-project.txt  ~$physicsWorkFlow.drawio.dtmp
GolemFactory/: DefaultProperties.props  GolemFactory.sln  PostBuild.bat  imgui.ini
GolemFactory/Engine/: Engine.vcxproj  Engine.vcxproj.filters
GolemFactory/ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters
GolemFactory/ThibaultTest/: ThibaultTest.vcxproj  ThibaultTest.vcxproj.filters  imgui.ini
Resources/Animation/: walk.anim
Resources/Animations/: female_move_walk_front.animation  human.animation  human2.animation  humanoid.animGraph  male_act_dance_01.animation  male_act_sit_on_chair.animation  male_act_standup_chair.animation  male_falling.animation  male_handshake.animation  male_idle_breath.animation  male_idle_meditate.animation  male_idle_on_chair.animation  male_idle_on_floor.animation  male_idle_pant.animation  male_jump.animation  male_landing.animation  male_move_run_back.animation  male_move_run_back_left.animation  male_move_run_back_right.animation  male_move_run_front.animation  male_move_run_front_left.animation  male_move_run_front_right.animation  male_move_run_left.animation  male_move_run_right.animation  male_move_run_sprint.animation  male_say_no.animation  (+10 more)
Sources/: DefaultUserEventEnum.enum  GolemFactoryApplicationThibault.cpp  GolemFactoryMetrics.xml  ModelImporterEventEnum.enum  ModelImporterMain.cpp  UserEnum.enum
(+2327 files in other folders)
